reversed a bad idea

--- a/src/admin_templates/admin_root.html
+++ b/src/admin_templates/admin_root.html
@@ -3,7 +3,7 @@
 {% block contents %}
 <ul>
 {% for name, slug in kinds %}
-<li><a href="/admin/{{ slug }}">{{ name }}</a></li>
+<li><a href="/admin/{{ name }}">{{ name }}</a></li>
 {% endfor %}
 </ul>
 
